# prometheus-textfile-wrapper

./: .gitignore  README.md  example.sh  flake.nix  package.nix  pyproject.toml  renovate.json
.github/workflows/: ci.yml
prometheus_script_wrapper/: __init__.py  registry.py
tests/: test_output.py
